# LogVeda

./: LICENSE
ingestor/: Makefile  pyproject.toml
